c2prj1_cards/grade.txt
Grading at Thu Sep 12 19:37:02 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:80:3: error: expected ‘;’ before ‘else’
   else if ( value_let == '0' )
   ^
Could not compile your card.c!

Overall Grade: FAILED
